tests/neg/i5101.check
-- [E006] Not Found Error: tests/neg/i5101.scala:11:11 -----------------------------------------------------------------
11 |      case A0(_) =>     // error
   |           ^^
   |           Not found: A0
   |
   | longer explanation available when compiling with `-explain`
